# crossfire-server

./: .ctags  .gitignore  .uncrustify.cfg  AUTHORS  CMakeLists.txt  ChangeLog  Containerfile  Doxyfile  Makefile  Makefile.am  Makefile.in  README.rst  aclocal.m4  check-fragment.am  config.status  configure.ac  configure~  libtool
plugins/cfanim/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cfanim.c  cfanim.cpp
plugins/cfanim/include/: Makefile  Makefile.in  cfanim.h  cfanim_proto.h
plugins/cflogger/: Makefile.am  cflogger.cpp
plugins/cflogger/include/: cflogger_proto.h
plugins/cfnewspaper/: Makefile.am  cfnewspaper.cpp
plugins/cfnewspaper/include/: cfnewspaper_proto.h
plugins/cfpython/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  cfpython.c  cfpython.cpp  cfpython_map.cpp  cfpython_object.c  cfpython_object.cpp  cjson.cpp  pyi-generate.cpp
plugins/cfpython/include/: Makefile  Makefile.in  cfpython.h  cfpython_proto.h  cfpython_region.h
random_maps/: Makefile  Makefile.am  main.cpp  maze_gen.c  maze_gen.cpp  monster.cpp  random_map.c  random_map.cpp  reader.c  rogue_layout.c  rogue_layout.cpp  room_gen_crawl.cpp  room_gen_spiral.cpp  snake.cpp  special.cpp  square_spiral.c  style.cpp  treasure.c  treasure.cpp
random_maps/.deps/: decor.Po  door.Po  exit.Po  expand2x.Po  floor.Po  maze_gen.Po  monster.Po  random_map.Po  reader.Po  rogue_layout.Po  room_gen_onion.Po  room_gen_spiral.Po  snake.Po  special.Po  square_spiral.Po  style.Po  treasure.Po  wall.Po
server/: Makefile  Makefile.am  account.c  account.cpp  account_char.c  account_char.cpp  alchemy.cpp  apply.c  apply.cpp  attack.c  attack.cpp  build_map.cpp  c_misc.c  c_misc.cpp  c_new.cpp  c_object.c  c_object.cpp  c_party.cpp  c_range.c  c_range.cpp  c_wiz.c  c_wiz.cpp  commands.cpp  disease.cpp  gods.c  gods.cpp  hiscore.c  hiscore.cpp  init.c  init.cpp  knowledge.c  knowledge.cpp  login.c  login.cpp  main.cpp  monster.c  monster.cpp  move.c  move.cpp  pets.c  (+27 more)
server/.deps/: alchemy.Po  apply.Po  attack.Po  ban.Po  build_map.Po  c_chat.Po  c_misc.Po  c_move.Po  c_new.Po  c_object.Po  c_party.Po  c_range.Po  c_wiz.Po  commands.Po  daemon.Po  disease.Po  egoitem.Po  gods.Po  hiscore.Po  init.Po  login.Po  main.Po  monster.Po  move.Po  pets.Po  player.Po  plugins.Po  resurrection.Po  rune.Po  server.Po  shop.Po  skill_util.Po  skills.Po  spell_attack.Po  spell_effect.Po  spell_util.Po  swamp.Po  swap.Po  time.Po  timers.Po  (+1 more)
server/modules/: cfcitybell.cpp  cfweather.cpp  citylife.cpp  random_house_generator.cpp
test/bugs/bugtrack/: Makefile.am  check_1727944.cpp  check_2879249.cpp  check_883.cpp  check_duplicate_skills.c  check_duplicate_skills.cpp  check_free_objects.cpp  (+1 more)
test/performance/: Makefile.am  perf_mapload.c  test_mapsave.cpp
types/: ChangeLog  Makefile.am
types/altar/: altar.cpp
types/armour_improver/: armour_improver.cpp
types/arrow/: arrow.cpp
types/blindness/: blindness.cpp
types/book/: book.c  book.cpp
types/button/: button.cpp
types/cf_handle/: cf_handle.cpp
types/check_inv/: check_inv.cpp
types/clock/: clock.cpp
types/common/: common_apply.c  common_apply.cpp  light_object.cpp  projectile.cpp
types/container/: container.cpp
types/converter/: converter.c  converter.cpp
types/creator/: creator.cpp
types/deep_swamp/: deep_swamp.cpp
types/director/: director.cpp
types/dragon_focus/: dragon_focus.cpp
types/duplicator/: duplicator.c  duplicator.cpp
types/exit/: exit.cpp
types/food/: food.cpp
types/gate/: gate.cpp
types/hole/: hole.cpp
types/identify_altar/: identify_altar.cpp
types/lamp/: lamp.c  lamp.cpp
types/legacy/: apply.cpp  legacy_describe.cpp  process.cpp
types/lightable/: lightable.c
types/lighter/: lighter.cpp
types/marker/: marker.c  marker.cpp
types/mimic/: mimic.cpp
types/peacemaker/: peacemaker.cpp
types/pedestal/: pedestal.cpp
types/player_mover/: player_mover.cpp
types/poison/: poison.cpp
types/poisoning/: poisoning.c  poisoning.cpp
types/potion/: potion.cpp
types/power_crystal/: power_crystal.cpp
types/savebed/: savebed.cpp
types/scroll/: scroll.cpp
types/shop_inventory/: shop_inventory.cpp
types/shop_mat/: shop_mat.c  shop_mat.cpp
types/sign/: sign.cpp
types/skillscroll/: skillscroll.cpp
types/spell_effect/: spell_effect.c  spell_effect.cpp
types/spellbook/: spellbook.c  spellbook.cpp
types/spinner/: spinner.cpp
types/thrown_object/: thrown_object.cpp
types/transport/: transport.c  transport.cpp
types/trap/: common_trap.cpp  trap.cpp
types/trapdoor/: trapdoor.cpp
types/trigger/: trigger.c  trigger.cpp
types/trigger_altar/: trigger_altar.c  trigger_altar.cpp
types/trigger_button/: trigger_button.c  trigger_button.cpp
types/trigger_pedestal/: trigger_pedestal.cpp
utils/: Makefile  Makefile.am  arch2xml.py  bwp.cpp  cfindent  crossfire-entrypoint.sh  crossfire-server-gdb.py  crossfire-server-local.in  crossloop.in  crossloop.web.in  gridarta-types-convert.c  gridarta-types-convert.cpp  itemdump.cpp  maps-to-dot  player_dl.pl  scores.pl.in
utils/cfrepl/: .gitignore  Makefile  README.md  build.lisp  cfrepl
utils/cre/: AllAssets.cpp  AllAssets.h  ArchetypesModel.cpp  ArchetypesModel.h  AssetFieldCompleter.cpp  AssetFieldCompleter.h  AssetTextEdit.cpp  AssetTextEdit.h  CMakeLists.txt  CREAnimationPanel.h  CREArchetypePanel.h  CREArtifactPanel.h  CRECombatSimulator.cpp  CRECombatSimulator.h  CREExperienceWindow.cpp  CREExperienceWindow.h  CREFacePanel.cpp  CREFacePanel.h  CREFacesetsPanel.h  CREFilterDefinition.cpp  CREFilterDefinition.h  CREFilterDefinitionManager.cpp  CREFilterDefinitionManager.h  CREFilterDialog.cpp  CREFilterDialog.h  CREFormulaePanel.h  CREGeneralMessagePanel.h  CREHPBarMaker.cpp  CREHPBarMaker.h  CREMainWindow.cpp  CREMainWindow.h  CREMapInformation.cpp  CREMapInformation.h  CREMapInformationManager.cpp  CREMapInformationManager.h  CREMapPanel.cpp  CREMapPanel.h  CREMessageItemModel.cpp  CREMessageItemModel.h  CREMessagePanel.cpp  (+86 more)
utils/mapper/: Makefile.am  mapper-with-search.sh  mapper.cpp
utils/ws_echo_server/: main.cpp  stubs.cpp
(+1041 files in other folders)
