AUTOMAKE_OPTIONS = subdir-objects

noinst_LIBRARIES = libtypes.a
libtypes_a_SOURCES = altar/altar.cpp \
armour_improver/armour_improver.cpp \
arrow/arrow.cpp \
blindness/blindness.cpp \
book/book.cpp \
button/button.cpp \
cf_handle/cf_handle.cpp \
check_inv/check_inv.cpp \
clock/clock.cpp \
container/container.cpp \
converter/converter.cpp \
creator/creator.cpp \
deep_swamp/deep_swamp.cpp \
detector/detector.cpp \
director/director.cpp \
dragon_focus/dragon_focus.cpp \
duplicator/duplicator.cpp \
exit/exit.cpp \
food/food.cpp \
gate/gate.cpp \
hole/hole.cpp \
identify_altar/identify_altar.cpp \
lamp/lamp.cpp \
lightable/lightable.cpp \
lighter/lighter.cpp \
marker/marker.cpp \
mimic/mimic.cpp \
mood_floor/mood_floor.cpp \
peacemaker/peacemaker.cpp \
pedestal/pedestal.cpp \
player_changer/player_changer.cpp \
player_mover/player_mover.cpp \
poison/poison.cpp \
poisoning/poisoning.cpp \
potion/potion.cpp \
power_crystal/power_crystal.cpp \
savebed/savebed.cpp \
scroll/scroll.cpp \
shop_inventory/shop_inventory.cpp \
shop_mat/shop_mat.cpp \
sign/sign.cpp \
skillscroll/skillscroll.cpp \
spell_effect/spell_effect.cpp \
spellbook/spellbook.cpp \
spinner/spinner.cpp \
teleporter/teleporter.cpp \
thrown_object/thrown_object.cpp \
transport/transport.cpp \
trap/common_trap.cpp \
trap/trap.cpp \
trap/rune.cpp \
trapdoor/trapdoor.cpp \
treasure/treasure.cpp \
trigger/trigger.cpp \
trigger_altar/trigger_altar.cpp \
trigger_button/trigger_button.cpp \
trigger_pedestal/trigger_pedestal.cpp \
weapon_improver/weapon_improver.cpp \
common/common_apply.cpp \
common/describe.cpp \
common/projectile.cpp \
common/light_object.cpp \
legacy/apply.cpp \
legacy/legacy_describe.cpp \
legacy/process.cpp


AM_CPPFLAGS = -I$(top_srcdir)/include -DDATADIR=\"$(pkgdatadir)\" -DCONFDIR=\"$(pkgconfdir)\" \
	      -DLIBDIR=\"$(pkglibdir)\" -DLOCALDIR=\"$(pkgstatedir)\" \
	      -DPLUGIN_SUFFIX=\".so\"

