set(CMAKE_AUTOMOC ON)
set(CMAKE_AUTORCC ON)
set(CMAKE_AUTOUIC ON)

find_package(Qt5 COMPONENTS Concurrent Script Widgets Help REQUIRED)

add_executable(cre
    AllAssets.cpp
    AllAssets.h
    ArchetypesModel.cpp
    ArchetypesModel.h
    AssetFieldCompleter.cpp
    AssetFieldCompleter.h
    AssetTextEdit.cpp
    AssetTextEdit.h
    CRECombatSimulator.cpp
    CRECombatSimulator.h
    CREExperienceWindow.cpp
    CREExperienceWindow.h
    CREFilterDefinition.cpp
    CREFilterDefinition.h
    CREFilterDefinitionManager.cpp
    CREFilterDefinitionManager.h
    CREFilterDialog.cpp
    CREFilterDialog.h
    CREHPBarMaker.cpp
    CREHPBarMaker.h
    CREMainWindow.cpp
    CREMainWindow.h
    CREMapInformation.cpp
    CREMapInformation.h
    CREMapInformationManager.cpp
    CREMapInformationManager.h
    CREMapPanel.cpp
    CREMapPanel.h
    CREMessageItemModel.cpp
    CREMessageItemModel.h
    CREMessagePanel.cpp
    CREMessagePanel.h
    CREMultilineItemDelegate.cpp
    CREMultilineItemDelegate.h
    CREPixmap.cpp
    CREPixmap.h
    CREPlayerRepliesDelegate.cpp
    CREPlayerRepliesDelegate.h
    CREPlayerRepliesPanel.cpp
    CREPlayerRepliesPanel.h
    CREPrePostConditionDelegate.cpp
    CREPrePostConditionDelegate.h
    CREPrePostList.cpp
    CREPrePostList.h
    CREPrePostPanel.cpp
    CREPrePostPanel.h
    CREQuestPanel.cpp
    CREQuestPanel.h
    CREReportDisplay.cpp
    CREReportDisplay.h
    CREResourcesWindow.cpp
    CREResourcesWindow.h
    CREScriptEngine.cpp
    CREScriptEngine.h
    CRESettings.cpp
    CRESettings.h
    CRESettingsDialog.cpp
    CRESettingsDialog.h
    CRESmoothFaceMaker.cpp
    CRESmoothFaceMaker.h
    CREStringListDelegate.cpp
    CREStringListDelegate.h
    CREStringListPanel.cpp
    CREStringListPanel.h
    CREUtils.cpp
    CREUtils.h
    ChangesDock.cpp
    ChangesDock.h
    EditMonstersDialog.cpp
    EditMonstersDialog.h
    FaceComboBox.cpp
    FaceComboBox.h
    FaceMakerDialog.cpp
    FaceMakerDialog.h
    HelpBrowser.cpp
    HelpBrowser.h
    HelpManager.cpp
    HelpManager.h
    LicenseManager.cpp
    LicenseManager.h
    MessageFile.cpp
    MessageFile.h
    MessageManager.cpp
    MessageManager.h
    MimeUtils.cpp
    QuestConditionScript.cpp
    QuestConditionScript.h
    QuickFilterDialog.cpp
    QuickFilterDialog.h
    ResourcesManager.cpp
    ResourcesManager.h
    animations/AnimationControl.cpp
    animations/AnimationControl.h
    animations/AnimationPanel.cpp
    animations/AnimationPanel.h
    animations/AnimationWidget.cpp
    animations/AnimationWidget.h
    animations/AnimationWrapper.cpp
    animations/AnimationWrapper.h
    animations/AnimationsWrapper.h
    archetypes/ArchetypeComboBox.cpp
    archetypes/ArchetypeComboBox.h
    archetypes/ArchetypePanel.cpp
    archetypes/ArchetypePanel.h
    archetypes/ArchetypeWrapper.cpp
    archetypes/ArchetypeWrapper.h
    archetypes/ArchetypesWrapper.cpp
    archetypes/ArchetypesWrapper.h
    archetypes/ObjectWrapper.cpp
    archetypes/ObjectWrapper.h
    artifacts/ArtifactListPanel.cpp
    artifacts/ArtifactListPanel.h
    artifacts/ArtifactListWrapper.cpp
    artifacts/ArtifactListWrapper.h
    artifacts/ArtifactPanel.cpp
    artifacts/ArtifactPanel.h
    artifacts/ArtifactWrapper.cpp
    artifacts/ArtifactWrapper.h
    artifacts/ArtifactsWrapper.cpp
    artifacts/ArtifactsWrapper.h
    assets/AssetModel.cpp
    assets/AssetModel.h
    assets/AssetOriginAndCreationDialog.cpp
    assets/AssetOriginAndCreationDialog.h
    assets/AssetUseTree.cpp
    assets/AssetUseTree.h
    assets/AssetWrapper.h
    assets/AssetWrapperPanel.cpp
    assets/AssetWrapperPanel.h
    attack_messages/AttackMessagePanel.cpp
    attack_messages/AttackMessagePanel.h
    attack_messages/AttackMessagesWrapper.cpp
    attack_messages/AttackMessagesWrapper.h
    cre.cpp
    cre.qrc
    faces/FacePanel.cpp
    faces/FacePanel.h
    faces/FaceWrapper.cpp
    faces/FaceWrapper.h
    faces/FacesWrapper.h
    faces/FacesetsPanel.cpp
    faces/FacesetsPanel.h
    faces/FacesetsWrapper.h
    general_messages/GeneralMessagePanel.cpp
    general_messages/GeneralMessagePanel.h
    general_messages/GeneralMessageWrapper.cpp
    general_messages/GeneralMessageWrapper.h
    general_messages/GeneralMessagesWrapper.h
    quests/QuestComboBox.cpp
    quests/QuestComboBox.h
    quests/QuestWrapper.cpp
    quests/QuestWrapper.h
    quests/QuestsWrapper.cpp
    quests/QuestsWrapper.h
    random_maps/RandomMap.cpp
    random_maps/RandomMap.h
    random_maps/RandomMapPanel.cpp
    random_maps/RandomMapPanel.h
    random_maps/RandomMaps.h
    recipes/RecipeListWrapper.cpp
    recipes/RecipeListWrapper.h
    recipes/RecipePanel.cpp
    recipes/RecipePanel.h
    recipes/RecipeWrapper.cpp
    recipes/RecipeWrapper.h
    recipes/RecipesWrapper.cpp
    recipes/RecipesWrapper.h
    regions/RegionPanel.cpp
    regions/RegionPanel.h
    regions/RegionWrapper.cpp
    regions/RegionWrapper.h
    regions/RegionsWrapper.cpp
    regions/RegionsWrapper.h
    scripts/ScriptFile.cpp
    scripts/ScriptFile.cpp
    scripts/ScriptFileManager.cpp
    scripts/ScriptFileManager.h
    scripts/ScriptFilePanel.cpp
    scripts/ScriptFilePanel.h
    sounds/GameSound.cpp
    sounds/GameSound.h
    sounds/GameSoundPanel.cpp
    sounds/GameSoundPanel.h
    sounds/GameSounds.cpp
    sounds/GameSounds.h
    sounds/GameSoundsPanel.cpp
    sounds/GameSoundsPanel.h
    sounds/SoundFile.cpp
    sounds/SoundFile.h
    sounds/SoundFilePanel.cpp
    sounds/SoundFilePanel.h
    sounds/SoundFiles.cpp
    sounds/SoundFiles.h
    sounds/SoundFilesPanel.cpp
    sounds/SoundFilesPanel.h
    sounds/SoundsDialog.cpp
    sounds/SoundsDialog.h
    treasures/TreasureListComboBox.cpp
    treasures/TreasureListComboBox.h
    treasures/TreasureListPanel.cpp
    treasures/TreasureListPanel.h
    treasures/TreasureListWrapper.cpp
    treasures/TreasureListWrapper.h
    treasures/TreasurePanel.cpp
    treasures/TreasurePanel.h
    treasures/TreasureWrapper.cpp
    treasures/TreasureWrapper.h
    treasures/TreasuresWrapper.h
)
target_include_directories(cre PRIVATE .)
target_precompile_headers(cre PRIVATE cre_pch.h)
target_link_libraries(cre PRIVATE Qt5::Concurrent Qt5::Help Qt5::Script Qt5::Script Qt5::Widgets cfserver)
